<resources>
    <string name="app_name">Hypechat</string>
    <string name="navigation_drawer_open">Abrir panel de navegación</string>
    <string name="navigation_drawer_close">Cerrar panel de navegación</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Cabecera del panel de navegación</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_profile">Mi perfil</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="enter_message">Escriba un mensaje</string>
    <string name="create_account"><b>Aún no tienes una cuenta?</b> <u>Crea una</u></string>
    <string name="password_restore"><b>¿Olvidaste tu contraseña?</b></string>
    <string name="hypechat_desc">Logo de hypechat</string>
    <string name="back">Go back</string>
    <string name="inicio">Inicio</string>
    <string name="channels_in_org">Canales en la organización seleccionada</string>

    <string name="action_search_profile">Buscar un perfil</string>

    <string name="action_about_channel">Acerca del canal</string>

    <string name="title_activity_login">Iniciar sesión</string>
    <string name="login_with_facebook">INICIAR SESIÓN CON FACEBOOK</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar</string>
    <string name="error_invalid_user">Este usuario no es válido</string>
    <string name="error_invalid_email">Este email no es válido</string>
    <string name="error_invalid_password">Esta password es muy corta</string>
    <string name="error_incorrect_password">Esta password es muy corta</string>
    <string name="error_pw_match">Las passwords no coinciden</string>
    <string name="error_field_required">Se requiere este campo</string>
    <string name="error_network">Conexión de red no disponible</string>
    <string name="or">ó</string>
    <string name="action_register">Registrarse</string>
    <string name="prompt_username">Nombre de usuario</string>
    <string name="prompt_token">Token</string>
    <string name="prompt_organization">Nombre de organización</string>
    <string name="prompt_channel">Nombre del canal</string>
    <string name="prompt_password_confirm">Confirmar password</string>
    <string name="prompt_new_pw">Nueva password</string>
    <string name="prompt_new_password_confirm">Confirmar nueva password</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCELAR</string>
    <string name="restore_pw">Restaurar contraseña</string>
    <string name="token_restore">Tengo un token</string>
    <string name="confirm_pw_change">Cambiar contraseña</string>

    <string name="usr_image_desc">Imagen de perfil del usuario</string>
    <string name="image_desc">Imagen segun corresponda al tipo</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="successful_login">Login exitoso</string>
    <string name="action_save_profile">Guardar cambios</string>
    <string name="saved_profile">Perfil guardado exitosamente</string>

    <string name="action_join_organization">Unirse a una organización</string>
    <string name="action_create_organization">Crear una organización</string>
    <string name="action_create_only_organization">Crear organización</string>
    <string name="what_to_do_organization">► ¿Qué desea hacer? ◄</string>
    <string name="organizations">Organizaciones</string>
    <string name="action_create_channel">Crear canal</string>

    <string name="no_invitations">No hay invitaciones pendientes</string>
    <string name="invitations">Invitaciones</string>

    <string name="send_invite">Enviar invitación</string>
    <string name="send_an_invite">Enviar una invitación</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_user_to_channel">Agregar usuario al canal</string>
    <string name="add_user">Agregar a</string>


    <string-array name="org_initial_array">
        <item>Inicio</item>
    </string-array>

    <string name="new_channel">Añadir canal</string>
    <string name="privado">Canal privado</string>
    <string name="load_msg">Cargando mensajes…</string>

    <string name="facebook_app_id">2286595768249304</string>
    <string name="fb_login_protocol_scheme">fb2286595768249304</string>

    <string name="search_one_profile">Buscar perfil de usuario</string>
    <string name="search">Buscar</string>
    <string name="reload_no_info">No se pudo cargar la información \n Por favor presione para recargar</string>
    <string name="privacy">Privacidad</string>

    <string name="publico_2">Público</string>
    <string name="privado_2">Privado</string>
    <string name="description">Descripción</string>
    <string name="welcome_message">Mensaje de bienvenida</string>
    <string name="msg_quantity">Cantidad de mensajes</string>
    <string name="members_quantity">Cantidad de miembros</string>
    <string name="owner_name">Nombre del propietario</string>
    <string name="channel_name">Nombre del canal</string>
    <string name="fecha_de_ban">Fecha de ban</string>
    <string name="raz_n_de_ban">Razón de ban</string>
    <string name="rol">Rol en la organización seleccionada</string>
    <string name="channels">Canales</string>

    <string name="fcm_token">FCM Token: %s</string>

    <string name="bot_create">Crear bot</string>
    <string name="bot_delete">Borrar bot</string>
    <string name="bot_a_create">Crear un bot</string>
    <string name="bot_a_delete">Borrar un bot</string>
    <string name="bot_admin">Administración de bots</string>
    <string name="organization_only">Organización:</string>
    <string name="channel_only">Canal:</string>
    <string name="bot_name">Nombre del bot</string>
    <string name="bot_url">URL del bot</string>
    <string name="action_bots">Bots</string>
    <string name="acton_save_channel">Guardar canal</string>
    <string name="action_map">Ver mapa</string>
    <string name="mapa">Mapa de</string>
    <string name="conversations">Conversaciones</string>
    <string name="start_conversation">Iniciar conversación</string>
    <string name="start_conv_with">Iniciar conversación con:</string>
</resources>
