<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_organization"
        android:orderInCategory="100"
        android:title="@string/organizations"
        android:icon="@drawable/organizaciones2"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_map"
        android:orderInCategory="150"
        android:visible="false"
        android:title="@string/action_map"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bots"
        android:orderInCategory="200"
        android:visible="false"
        android:title="@string/action_bots"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_channel"
        android:orderInCategory="300"
        android:visible="false"
        android:title="@string/action_about_channel"
        app:showAsAction="never" />

    <item
        android:id="@+id/acton_save_channel"
        android:orderInCategory="400"
        android:visible="false"
        android:icon="@drawable/save_icon"
        android:title="@string/acton_save_channel"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="500"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search_profile"
        android:orderInCategory="600"
        android:title="@string/action_search_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="700"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
