<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:fitsSystemWindows="true"
    tools:context=".LoginActivity"
    >

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/hypechat_desc"
            android:src="@drawable/logo_transparent2" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/user_ti_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorAccent">

            <AutoCompleteTextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:imeOptions="actionNext"
                android:inputType="text|textPersonName"
                android:maxLines="1"
                android:nextFocusDown="@id/email_sign_in_button"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pw_ti_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorAccent"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="Autofill" />

        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorAccent"
                android:text="@string/action_sign_in"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:onClick="openRegisterActivity"
                android:text="@string/create_account"
                android:textColor="@color/colorAccentLight"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/link_password_restore"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:onClick="openPwRestoreActivity"
                android:text="@string/password_restore"
                android:textColor="@color/colorAccentLight"
                android:textSize="14sp" />

        </LinearLayout>





    </LinearLayout>

</ScrollView>