<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".PasswordRestoreActivity"
    >

    <ImageView
        android:id="@+id/go_back_pw_restore"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="start"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back"
        android:layout_marginLeft="24dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/pw_restore_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="4dp"
            android:paddingRight="24dp">

            <ImageButton
                android:id="@+id/pw_restore_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/hypechat_desc"
                android:onClick="hideTokenLayout"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/hypechat_desc"
                android:src="@drawable/logo_transparent2" />

            <ProgressBar
                android:id="@+id/pw_restore_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/pw_restore_username_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/username_password_restore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="text|textPersonName"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,TextFields" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/pw_token_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/token_password_restore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_token"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,TextFields" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_pw_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/new_pw_restore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_pw"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,TextFields" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_new_pw_ti_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/colorAccent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/confirm_new_pw_restore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_new_password_confirm"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="Autofill,TextFields" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/pw_restore_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorAccent"
                android:onClick="restorePasswordDialog"
                android:text="@string/restore_pw"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pw_token_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorAccent"
                android:onClick="showTokenLayout"
                android:text="@string/token_restore"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pw_confirm_restore_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:visibility="gone"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@color/colorAccent"
                android:onClick="changePassword"
                android:text="@string/confirm_pw_change"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>