<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OrganizationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bot_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageButton
                android:id="@+id/bot_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@android:color/transparent"
                android:contentDescription="@string/hypechat_desc"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/bot_image"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/hypechat_desc"
                android:tint="@color/colorPrimary"
                android:src="@drawable/bot" />

            <ProgressBar
                android:id="@+id/bot_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="96dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/bot_admin" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_organization_bot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/organization_only" />

                <TextView
                    android:id="@+id/textView_organization_bot_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="14sp"
                    android:layout_toEndOf="@+id/textView_organization_bot"
                    android:layout_toRightOf="@+id/textView_organization_bot"
                    android:text="" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_channel_bot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/channel_only" />

                <TextView
                    android:id="@+id/textView_channel_bot_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:textSize="14sp"
                    android:layout_toEndOf="@+id/textView_channel_bot"
                    android:layout_toRightOf="@+id/textView_channel_bot"
                    android:text="" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bot_create_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorAccent"
                    android:text="@string/bot_create"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/bot_delete_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorAccent"
                    android:text="@string/bot_delete"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bot_hidden"
                android:visibility="gone"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/bot_name_ti_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/bot_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bot_name"
                        android:imeOptions="actionDone"
                        android:inputType="text|textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/bot_url_ti_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorAccent"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/bot_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/bot_url"
                        android:imeOptions="actionDone"
                        android:inputType="text|textWebEditText"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/bot_create_only_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorAccent"
                    android:text="@string/bot_a_create"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/bot_delete_only_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/colorAccent"
                    android:text="@string/bot_a_delete"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                     />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>