<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrganizationFragment">

    <LinearLayout
        android:id="@+id/organization_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageButton
            android:id="@+id/organizations_creation_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="invisible"
            android:background="@android:color/transparent"
            android:contentDescription="@string/hypechat_desc"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />

        <ProgressBar
            android:id="@+id/organization_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/organizations_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/hypechat_desc"
            android:src="@drawable/organizaciones" />

        <Button
            android:id="@+id/organizations_join_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:text="@string/action_join_organization"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/organizations_create_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:text="@string/action_create_organization"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/organization_name_ti_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColorHint="@color/colorAccent">

            <AutoCompleteTextView
                android:id="@+id/organization_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_organization"
                android:imeOptions="actionDone"
                android:inputType="text|textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/organizations_create_only_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            android:background="@color/colorAccent"
            android:text="@string/action_create_only_organization"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>